create github pages

--- a/Archives.html
+++ b/Archives.html
@@ -38,7 +38,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/logo.png" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">The Lion's Tale</a>
+                        <a class="navbar-caption" href="Home.html">The Lion's Tale</a>
                     </div>
 
                 </div>
@@ -48,7 +48,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="Sports">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Events">Comedy</a></li><li class="nav-item"><a class="nav-link link" href=".CAS">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Miscellaneous">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="Home.html">Home</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="Sports">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Comedy">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Miscellaneous">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="Home.html">Home</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">website builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="249" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/c">website maker</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="249" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
