--- a/Article Page.html
+++ b/Article Page.html
@@ -38,11 +38,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/logo.png" alt="Mobirise"></a>
-<<<<<<< HEAD
                         <a class="navbar-caption" href="index.html">The Lion's Tale</a>
-=======
-                        <a class="navbar-caption" href="Home.html">The Lion's Tale</a>
->>>>>>> ba3d299cbf577a98c958a3b11a459b65904d6f35
                     </div>
 
                 </div>
@@ -52,11 +48,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-<<<<<<< HEAD
                     <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="Sports">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Comedy">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Miscellaneous">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html">Home</a></li></ul>
-=======
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="Sports">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Comedy">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Miscellaneous">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="Home.html">Home</a></li></ul>
->>>>>>> ba3d299cbf577a98c958a3b11a459b65904d6f35
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -69,11 +61,7 @@
 
 </section>
 
-<<<<<<< HEAD
-<section class="engine"><a href="https://mobirise.co/b">web site creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1q" data-rv-view="35" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
-=======
-<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1q" data-rv-view="35" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
->>>>>>> ba3d299cbf577a98c958a3b11a459b65904d6f35
+<section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1q" data-rv-view="35" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
