--- a/About.html
+++ b/About.html
@@ -62,7 +62,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons4-19" data-rv-view="77" style="background-color: rgb(23, 64, 52); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons4-19" data-rv-view="77" style="background-color: rgb(23, 64, 52); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
