--- a/Events.html
+++ b/Events.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">how to make a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="33" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/d">free website software</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="33" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -83,7 +83,7 @@
                                 <p>Coming once orientation actually happens.</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="https://mobirise.com">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page17.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
