--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">make your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="46" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/i">build your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="46" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -151,7 +151,7 @@
                 <div class="card cart-block">
                     <div class="card-img"><img src="assets/images/italy-migrants-refugees-asylum-seekers-600x400.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Living the Dream</h4>
+                        <h4 class="card-title">Living the Dream?</h4>
                         <h5 class="card-subtitle">Written By: Eva Morris</h5>
                         <p class="card-text">While mostly based on fact, this is partially an opinion piece delving in to the problem of the migrant crisis in Europe.</p>
                         <div class="card-btn"><a href="page16.html" class="btn btn-danger">MORE</a></div>
