--- a/Events.html
+++ b/Events.html
@@ -38,7 +38,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/20988002-1378120402302790-1549326759-n-130x128.png" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="lionstale.news">The Lion's Tale</a>
+                        <a class="navbar-caption" href="http://lionstale.news">The Lion's Tale</a>
                     </div>
 
                 </div>
@@ -48,7 +48,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="Sports.html">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Comedy">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives.html">Archives</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="lionstale.news">Home</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="Sports.html">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Comedy">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives.html">Archives</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="http://lionstale.news">Home</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="98" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/h">make your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="98" style="background-color: rgb(23, 64, 52);">
 
     
 
