--- a/page14.html
+++ b/page14.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-2l" data-rv-view="209" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/i">how to build a website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-2l" data-rv-view="209" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -134,8 +134,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 lead"><p>Composition of your photo counts. This is what will determine what your viewer sees in the photo.
-</p><p>The Rule of thirds: This is a general rule of thumb. If you divide your photo into 9 equal parts, the cross sections of the dividends are there you want to place the subject or subjects of interest.
-</p><p>Focus: Where your photo is the sharpest is there your viewer’s eyes will wander first. Make it count.
+</p><p>The Rule of thirds: This is a general rule of thumb. If you divide your photo into 9 equal parts, the cross sections of the dividends are where you want to place the subject or subjects of interest.
+</p><p>Focus: Where your photo is the sharpest is where your viewer’s eyes will wander first. Make it count.
 </p><p>Horizontal vs Vertical: Learn when it is appropriate to use either. If the subject of your photo is tall, say a tower, go vertical. If you are taking a large group photo, go horizontal. Of course, this completely depends on how you want to frame the picture for your subject(s).
 </p><p>Angle: Before you take a photo, explore your angles. You might find that certain elements of your subject are visible from one side, but not the other.
 </p></div>
