--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">how to design a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="46" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/j">design a website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="46" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -114,7 +114,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Lucky to Be Lions</h4>
                         <h5 class="card-subtitle">Written By: Ceola Daly</h5>
-                        <p class="card-text">What does our mascot mean to us?<br></p>
+                        <p class="card-text">What does our mascot mean to us?<br><br></p>
                         <div class="card-btn"><a href="page13.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
