--- a/page16.html
+++ b/page16.html
@@ -28,7 +28,7 @@
   
 </head>
 <body>
-<section id="menu-3q" data-rv-view="56">
+<section id="menu-3q" data-rv-view="242">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -48,7 +48,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="Sports.html">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Comedy">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives.html">Archives</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="http://lionstale.news">Home</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="Sports.html">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives.html">Archives</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="http://lionstale.news">Home</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free site creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-3s" data-rv-view="60" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-3s" data-rv-view="246" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -76,7 +76,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-3t" data-rv-view="63" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-3t" data-rv-view="249" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -87,7 +87,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-3u" data-rv-view="65" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-3u" data-rv-view="251" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -104,7 +104,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-3v" data-rv-view="67" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-3v" data-rv-view="253" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -117,7 +117,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-3w" data-rv-view="69" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-3w" data-rv-view="255" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -128,7 +128,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-3x" data-rv-view="71" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-3x" data-rv-view="257" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -141,7 +141,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-3y" data-rv-view="73" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-3y" data-rv-view="259" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -151,7 +151,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-3r" data-rv-view="58" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-3r" data-rv-view="244" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
