--- a/page19.html
+++ b/page19.html
@@ -61,14 +61,14 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">make a website for free</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4q" data-rv-view="309" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4q" data-rv-view="309" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">2017-2018 Guide to St. John's</h3>
-                <div class="lead"><p>Written By: Aimee Dastin-van Rijn</p><p>With Contributions By: Lucy Lansman, Evan Dastin-van Rijn, Andreea Samareanu, Clara Dehandschutter, Claire Graham, Madeleine Bitter, Theijs Boekema, Kajsa Hansen, Matthieu De Wolf, Peder Foss, Jose Malinab, Rehaan Ahmad, Lukas Nichta, Ceola Daly, Joud Aboud, Nathaniel Bentley, and Akari Izumi</p></div>
+                <div class="lead"><p>Written By: Aimee Dastin-van Rijn</p><p>With Contributions By: Lucy Lansman, Evan Dastin-van Rijn, Andreea Samareanu, Clara Dehandschutter, Claire Graham, Madeleine Bitter, Thijs Boekema, Kajsa Hansen, Matthieu De Wolf, Peder Foss, Jose Malinab, Rehaan Ahmad, Lukas Nichta, Ceola Daly, Joud Aboud, Nathaniel Bentley, and Akari Izumi</p></div>
                 
             </div>
         </div>
